--- a/example/package.json
+++ b/example/package.json
@@ -7,24 +7,21 @@
   "scripts": {
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web",
     "start": "expo start",
     "test": "jest"
   },
   "dependencies": {
-    "expo": "^38.0.0",
-    "expo-splash-screen": "^0.3.1",
-    "react": "16.11.0",
-    "react-dom": "16.11.0",
-    "react-native": "0.62.2",
-    "react-native-unimodules": "~0.10.1",
-    "react-native-web": "^0.12.3"
+    "expo": "^38.0.9",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-native": "^0.63.2",
+    "react-native-unimodules": "^0.10.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.6",
-    "@babel/runtime": "^7.9.6",
+    "@babel/core": "^7.11.1",
+    "@babel/runtime": "^7.11.2",
     "babel-plugin-module-resolver": "^4.0.0",
     "babel-preset-expo": "^8.2.3",
-    "expo-cli": "^3.21.12"
+    "expo-cli": "^3.24.2"
   }
 }
