--- a/example/package.json
+++ b/example/package.json
@@ -11,15 +11,18 @@
     "test": "jest"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
     "expo": "^38.0.9",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-native": "^0.63.2",
-    "react-native-unimodules": "^0.10.1"
+    "react-native": "~0.62.2",
+    "react-native-unimodules": "^0.10.1",
+    "react-native-webview": "9.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.11.1",
     "@babel/runtime": "^7.11.2",
+    "@types/react-dom": "^16.9.8",
     "babel-plugin-module-resolver": "^4.0.0",
     "babel-preset-expo": "^8.2.3",
     "expo-cli": "^3.24.2"
