--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "@release-it/conventional-changelog": "^1.1.4",
     "@types/jest": "^26.0.0",
     "@types/react": "^16.9.19",
-    "@types/react-native": "^0.63.8",
+    "@types/react-native": "~0.62.18",
     "commitlint": "^9.1.2",
     "eslint": "^7.2.0",
     "eslint-config-prettier": "^6.11.0",
@@ -62,13 +62,15 @@
     "pod-install": "^0.1.0",
     "prettier": "^2.0.5",
     "react": "^16.11.0",
-    "react-native": "^0.63.2",
+    "react-native": "~0.62.2",
+    "react-native-webview": "^10.7.0",
     "release-it": "^13.5.8",
     "typescript": "^3.8.3"
   },
   "peerDependencies": {
     "react": "*",
-    "react-native": "*"
+    "react-native": "*",
+    "react-native-webview": "*"
   },
   "jest": {
     "preset": "react-native",
@@ -142,5 +144,10 @@
       "module",
       "typescript"
     ]
+  },
+  "dependencies": {
+    "babel-plugin-preval": "^5.0.0",
+    "do-sync": "^2.2.0",
+    "node-fetch": "^2.6.0"
   }
 }
