--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
   },
   "homepage": "https://github.com/robertying/react-native-dom-webview#readme",
   "devDependencies": {
+    "@babel/cli": "^7.10.5",
+    "@babel/core": "^7.11.1",
     "@commitlint/config-conventional": "^9.1.2",
     "@react-native-community/bob": "^0.16.2",
     "@react-native-community/eslint-config": "^2.0.0",
@@ -58,7 +60,8 @@
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.3",
     "husky": "^4.2.5",
-    "jest": "^26.0.1",
+    "jest": "^26.4.1",
+    "jest-serializer-path": "^0.1.15",
     "pod-install": "^0.1.0",
     "prettier": "^2.0.5",
     "react": "^16.11.0",
@@ -77,6 +80,9 @@
     "modulePathIgnorePatterns": [
       "<rootDir>/example/node_modules",
       "<rootDir>/lib/"
+    ],
+    "snapshotSerializers": [
+      "jest-serializer-path"
     ]
   },
   "husky": {
