--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "!lib/typescript/example",
     "!**/__tests__",
     "!**/__fixtures__",
-    "!**/__mocks__"
+    "!**/__mocks__",
+    "babel.js",
+    "global.d.ts"
   ],
   "scripts": {
     "test": "jest",
